# Machine_Learning_2_course_UvA

./: .gitignore  README.md  pyproject.toml
src/Lab2/: lab2.ipynb
src/Lab3/: BTC-USD.csv  lab3.ipynb  test.py
