[tool.poetry]
name = "ml2-labs"
version = "0.1.0"
description = "Solutions from Machine Learning 2 course at UvA"
authors = ["Szymon Budziak"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "==3.8.10"
numpy = "1.22.3"
matplotlib = "3.5.2"
scipy = "1.9.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
